Changes CMake List

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_executable(techdemo
 if(WIN32)
   target_link_libraries(techdemo libcurl_imp jsoncpp mariadb) 
 ELSE()
-  target_link_libraries(techdemo libcurl jsoncpp mariadb) 
+  target_link_libraries(techdemo libcurl libjsoncpp mariadb) 
 ENDIF()
 
 
